force-app/main/default/objects/Treaty_Versions__c/Treaty_Versions__c.object-meta.xml
<CustomObject>
    <label>Treaty Version</label>
    <nameField>
        <displayFormat>Treaty-{00}</displayFormat>
        <label>Master Treaty Version Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Treaty Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>