force-app/main/default/objects/Treaty_Versions__c/fields/Ceded_4x1_Rate__c.field-meta.xml
<CustomField>
    <fullName>Ceded_4x1_Rate__c</fullName>
    <label>Ceded 4x1 Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>