force-app/main/default/objects/Treaty_Versions__c/fields/Ceded_Primary_Rate_Delta__c.field-meta.xml
<CustomField>
    <fullName>Ceded_Primary_Rate_Delta__c</fullName>
    <label>Ceded Primary Rate Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>