force-app/main/default/objects/Treaty_Versions__c/fields/Reinsurance_Limit__c.field-meta.xml
<CustomField>
    <fullName>Reinsurance_Limit__c</fullName>
    <label>Reinsurance Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>