force-app/main/default/objects/Treaty_Versions__c/fields/Treaty_Correction_Processed__c.field-meta.xml
<CustomField>
    <fullName>Treaty_Correction_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Treaty Correction Processed</label>
    <type>Checkbox</type>
</CustomField>