force-app/main/default/objects/Treaty_Versions__c/fields/Treaty_Name__c.field-meta.xml
<CustomField>
    <fullName>Treaty_Name__c</fullName>
    <formula>&quot;Treaty Year &quot; +  TEXT(YEAR(Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Treaty Name</label>
    <type>Text</type>
</CustomField>