force-app/main/default/objects/Treaty_Versions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Treaty_Name__c</columns>
    <columns>Ceded_Primary_Rate__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Reinsurance_Limit__c</columns>
    <columns>Treaty_Correction_Processed__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>